--- a/projects/truenas-ui/src/stories/docs/theme-docs.mdx
+++ b/projects/truenas-ui/src/stories/docs/theme-docs.mdx
@@ -23,5 +23,184 @@ Use CSS variables to apply theme styles:
 .my-component {
   background-color: var(--bg1);
   color: var(--fg1);
+  border: 1px solid var(--lines);
 }
+```
+
+## Theme Variables Reference
+
+Each theme defines the following CSS custom properties:
+
+### Core Colors
+- `--primary`: Primary brand color
+- `--primary-txt`: Text color for primary backgrounds
+- `--accent`: Accent color for highlights
+- `--topbar`: Top navigation bar background
+- `--topbar-txt`: Top navigation bar text
+
+### Background Colors
+- `--bg1`: Main background color
+- `--bg2`: Secondary background color (cards, panels)
+- `--alt-bg1`: Alternative background 1
+- `--alt-bg2`: Alternative background 2
+
+### Text Colors
+- `--fg1`: Primary text color
+- `--fg2`: Secondary text color
+- `--alt-fg1`: Alternative text color 1
+- `--alt-fg2`: Alternative text color 2
+
+### UI Elements
+- `--lines`: Border and divider color
+- `--btn-default-bg`: Default button background
+- `--btn-default-txt`: Default button text
+
+### Status Colors
+- `--red`: Error/danger color
+- `--green`: Success color
+- `--yellow`: Warning color
+- `--blue`: Info color
+- `--orange`: Secondary warning
+- `--cyan`: Info accent
+
+---
+
+## Theme Definitions
+
+### iX Dark (Default)
+The default TrueNAS dark theme with blue accents.
+
+**Key Colors:**
+- `--primary`: #0095D5
+- `--accent`: #545454
+- `--bg1`: #1E1E1E
+- `--bg2`: #282828
+- `--fg1`: #ffffff
+- `--fg2`: rgba(255,255,255,0.85)
+- `--lines`: #383838
+- `--red`: #CE2929
+- `--green`: #71BF44
+- `--yellow`: #DED142
+
+### iX Blue
+Official iX System colors on a light background.
+
+**Key Colors:**
+- `--primary`: #0095D5
+- `--accent`: #DED142
+- `--bg1`: #f2f2f2
+- `--bg2`: #ffffff
+- `--fg1`: #585858
+- `--fg2`: #666666
+- `--lines`: #383838
+
+### Dracula
+Popular dark theme with purple accents.
+
+**Key Colors:**
+- `--primary`: #6272a4
+- `--accent`: #bd93f9
+- `--bg1`: #181a26
+- `--bg2`: #282a36
+- `--fg1`: #efefef
+- `--fg2`: #cacac5
+- `--lines`: #383838
+- `--red`: #ff5555
+- `--green`: #50fa7b
+- `--yellow`: #f1fa8c
+
+### Nord
+Inspired by the Nord color palette with cool blues and grays.
+
+**Key Colors:**
+- `--primary`: #88c0d0
+- `--accent`: #5e81aC
+- `--bg1`: #2e3440
+- `--bg2`: #3b4252
+- `--fg1`: #eceff4
+- `--fg2`: #e5e9f0
+- `--lines`: #383838
+- `--red`: #bf616a
+- `--green`: #a3be8c
+- `--yellow`: #ebcb8b
+
+### Paper
+FreeNAS 11.2 default theme with light backgrounds and blue accents.
+
+**Key Colors:**
+- `--primary`: #0D5687
+- `--accent`: #f0cb00
+- `--bg1`: #F2F2F2
+- `--bg2`: #FAFAFA
+- `--fg1`: #3f3f3f
+- `--fg2`: #666666
+- `--lines`: #383838
+- `--red`: #ff0013
+- `--green`: #1F9642
+
+### Solarized Dark
+Solarized dark color scheme with warm tones.
+
+**Key Colors:**
+- `--primary`: #586e75
+- `--accent`: #2aa198
+- `--bg1`: #002b36
+- `--bg2`: #073642
+- `--fg1`: #586e75
+- `--fg2`: #7f99a2
+- `--lines`: #383838
+- `--red`: #dc322f
+- `--green`: #859900
+- `--yellow`: #b58900
+
+### Midnight
+Dark theme with blues and grays for a professional look.
+
+**Key Colors:**
+- `--primary`: #1274b5
+- `--accent`: #c17ecc
+- `--bg1`: #212a35
+- `--bg2`: #303d48
+- `--fg1`: #aaaaaa
+- `--fg2`: #cccccc
+- `--lines`: #383838
+- `--red`: #ff0013
+- `--green`: #1F9642
+
+### High Contrast
+High contrast theme based on Legacy Django UI color scheme.
+
+**Key Colors:**
+- `--primary`: #4784ac
+- `--accent`: #d238ff
+- `--bg1`: #dddddd
+- `--bg2`: #ffffff
+- `--fg1`: #222222
+- `--fg2`: #333333
+- `--lines`: #383838
+- `--red`: #ff0013
+- `--green`: #59d600
+
+## Implementation Notes
+
+### Component Integration
+Components should use the `--lines` variable for borders and dividers:
+
+```scss
+.component {
+  border: 1px solid var(--lines);
+  border-bottom: 1px solid var(--lines);
+}
+```
+
+### Fallback Values
+When using CSS variables, always provide fallback values for better compatibility:
+
+```scss
+.component {
+  background-color: var(--bg1, #1E1E1E);
+  color: var(--fg1, #ffffff);
+  border: 1px solid var(--lines, #383838);
+}
+```
 
