--- a/projects/truenas-ui/src/stories/api/theming.mdx
+++ b/projects/truenas-ui/src/stories/api/theming.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Style Guide/Themes" />
+<Meta title="API/Theming" />
 
 # Theming in TrueNAS UI Library
 
